# wind-rewrite

./: Cargo.toml  TODO
examples/: 01-macros.sz  02-tokens.sz
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/assembler/x86_64/: enc.rs  instr.rs  mem.rs  mod.rs  regs.rs
src/backend/assembler/x86_64/instr/: add.rs  call.rs  common.rs  jmp.rs  lea.rs  mod.rs  mov.rs  sub.rs
src/backend/ir/: flags.rs  helper.rs  mod.rs
src/backend/opt/: mod.rs
src/backend/opt/pipeline/: dead_code.rs  folding.rs  strength.rs
src/backend/writer/: mod.rs  obj.rs
src/frontend/: mod.rs
src/frontend/ast/: mod.rs
src/frontend/lexer/: mod.rs  simd.rs
src/frontend/parser/: mod.rs  parser_impl.rs
src/frontend/preprocessor/: macros.rs  mod.rs
src/frontend/token/: mod.rs
src/reporter/: asm.rs  comp.rs  lex.rs  mod.rs  obj.rs  prep.rs  usr.rs
src/usr/: mod.rs
testing/: asm.rs  ir.rs  lexer.rs  opt.rs  parser.rs  writer.rs
testing/tests/asm/: simple.rs
testing/tests/ir/: tree_init.rs
testing/tests/lexer/: tokenize.rs
testing/tests/opts/: const_folding.rs  dead_code.rs  strength.rs
testing/tests/parser/: ops.rs  simple_parse.rs
testing/tests/print/: tree_init.rs
testing/tests/writer/: simple.rs
tests/: ir.rs  lexer.rs  parser.rs
