[package]
name = "wind"
version = "0.1.0"
edition = "2024"
authors = ["utcq", "stopa"]

[[bin]]
name = "wind"
path = "src/main.rs"




# --------------- Build Config ----------------

#[profile.release]
#rustflags = ["-C", "target-cpu=native"]

# ---------------------------------------------




# ------------------- Tests -------------------

# IR testing
[[test]]
name = "ir"
path = "testing/ir.rs"

# Optimizations testing

[[test]]
name = "opt"
path = "testing/opt.rs"

# Lexer testing
[[test]]
name = "lexer"
path = "testing/lexer.rs"

# Parser testing
[[test]]
name = "parser"
path = "testing/parser.rs"

# Assembler testing
[[test]]
name = "asm"
path = "testing/asm.rs"

# Writer testing
[[test]]
name = "writer"
path = "testing/writer.rs"

# --------------------------------------------




# ------------------- Deps -------------------

[dependencies.thiserror]
version = "1.0"

[dependencies.object]
version = "0.36.7"
features = ["write_core"]

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

# --------------------------------------------
